--- a/mystyle.css
+++ b/mystyle.css
@@ -499,7 +499,7 @@ content: "\ea80";
         width: 200px; 
         font-weight: 600;
     }
-    .org a{
+    .org a, .degree a{
         text-decoration: none;
         color: blanchedalmond;
         transition: 0.3s;
